# nixos-config

./: README.md  flake.nix
apps/git/: git.nix
apps/nvim/: nvim.nix
home-manager/homelab/: configuration.nix  default.nix  home.nix  nvim.nix
home-manager/homelab/alacritty/: alacritty.yml  colors.yml  default.nix  fonts.yml
home-manager/homelab/nvim/: keymaps.lua  options.lua
home-manager/homelab/programs/: default.nix
home-manager/homelab/themes/: default.nix
hosts/nixos/: configuration.nix  hardware-configuration.nix  home.nix
hosts/popos/: home.nix
modules/home-manager/applications/: default.nix
modules/home-manager/hyprland/: default.nix  fuzzel.nix  hyprland.nix  hyprlock.nix  hyprpaper.nix  swaync.nix  theme.nix  waybar.nix  wlogout.nix
modules/home-manager/programming_languages/: default.nix
modules/nixos/: bluetooth.nix  bootloader.nix  cloudflare-warp.nix  default.nix  flatpak.nix  fonts.nix  hardware.nix  network.nix  pipewire.nix  programs.nix  sddm.nix  security.nix  services.nix  steam.nix  system.nix  user.nix  virtualization.nix  wayland.nix
nixos/: configuration.nix  hardware-configuration.nix
overlays/: default.nix
templates/: default.nix
templates/jupyterlab/: default.nix  flake.nix  pyproject.toml  shell.nix
templates/jupyterlab/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
templates/jupyterlab/src/: Untitled.ipynb
templates/jupyterlab/src/.ipynb_checkpoints/: shell-checkpoint.nix
templates/python/: default.nix  flake.nix  pyproject.toml  script.py  shell.nix
templates/python/src/: script.py
(+109 files in other folders)
