[tool.poetry]
name = "my-project"
version = "0.1.0"
description = "My Python project"
authors = [""]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
pandas = "^2.2.1"
ipykernel = "^6.29.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
