[tool.poetry]
name = "my-project"
version = "0.1.0"
description = "My Python project"
authors = [""]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pandas = "^2.2.1"
black = "^24.3.0"
isort = "^5.13.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
